# SalientPosesMaya

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  ideinit.sh  module.txt  run-tests.sh  setup.bat  setup.command  setup.sh
docs/: index.md
maya/: SalientPoses.mod  shelf_SalientPoses.mel
maya/scripts/: salient_poses_interface.py
maya/scripts/altmaya/: LICENSE  __init__.py  maya_animation.py  maya_api.py  maya_attr_index.py  maya_blendshapes.py  maya_callbacks.py  maya_deformation.py  maya_functions.py  maya_gui.py  maya_history.py  maya_io.py  maya_mesh.py  maya_mouse.py  maya_object_index.py  maya_plugins.py  maya_raycast.py  maya_reporting.py  maya_selection.py  maya_shader.py  maya_timeline.py  maya_types.py  tools.py
results/: generate_results.py
scripts/: AEvuwAnalysisNodeTemplate.mel  AEvuwSelectorNodeTemplate.mel  salient_api.py  salient_menu.py  salient_poses_menu.py  salient_poses_utils.py  salient_utils.py  shelf_SalientPoses.mel
src/: AnalysisNode.cpp  AnalysisNode.hpp  AnimationProxy.cpp  AnimationProxy.hpp  CMakeLists.txt  ErrorTable.cpp  ErrorTable.hpp  Interpolator.cpp  Interpolator.hpp  MayaUtils.cpp  MayaUtils.hpp  OpenCLInfoCommand.cpp  OpenCLInfoCommand.hpp  OpenCLProcess.hpp  ReduceCommand.cpp  ReduceCommand.hpp  SelectCommand.cpp  SelectCommand.hpp  SelectionManager.cpp  SelectionManager.hpp  SelectionProxy.cpp  SelectionProxy.hpp  Selector.cpp  Selector.hpp  SelectorNode.cpp  SelectorNode.hpp  common.cpp  common.hpp  kernel.cl  main.cpp  pluginMain.cpp
tests/: test_salient_poses.py
tests/expected/: test_analysis_node.out  test_selector_node_errors.out  test_selector_node_selection.out  test_selector_node_sub_sel_a_errors.out  test_selector_node_sub_sel_a_selection.out  test_selector_node_sub_sel_b_errors.out  test_selector_node_sub_sel_b_selection.out  test_selector_node_sub_sel_stress_errors.out  test_selector_node_sub_sel_stress_selection.out
